.kube/debugger.yaml
kind: Service
apiVersion: v1
metadata:
  name: debugger
spec:
  selector:
    app: debugger
  ports:
    - port: 8815
      name: debugger-http
      targetPort: 8815
      protocol: TCP
    - name: debugger-websocket
      port: 8816
      targetPort: 8816
      protocol: TCP
    - name: debugger-mailer
      port: 1025
      targetPort: 1025
      protocol: TCP
    - name: debugger-monolog
      port: 4343
      targetPort: 4343
      protocol: TCP
    - name: debugger-dump
      port: 5555
      targetPort: 5555
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debugger
spec:
  selector:
    matchLabels:
      app: debugger
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: debugger
    spec:
      containers:
        - name: debugger
          image: trackflow/server
          ports:
            - containerPort: 8815
            - containerPort: 8816
            - containerPort: 5555
            - containerPort: 4343
            - containerPort: 1025
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: debugger
  name: debugger-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  tls:
    - secretName: secret-tls-wildcard-nrjzr-com
  rules:
    - host: "${CI_MERGE_REQUEST_IID}-debugger.tld.com"
      http:
        paths:
          - backend:
              service:
                name: debugger
                port:
                  number: 8815
            path: /
            pathType: Prefix
    - host: "ws-${CI_MERGE_REQUEST_IID}-debugger.tld.com"
      http:
        paths:
          - backend:
              service:
                name: websocket
                port:
                  number: 8816
            path: /
            pathType: Prefix
